--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.4",
     "d3-transition": "^1.1.1",
+    "fs": "^0.0.1-security",
     "live-server": "^1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
