--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d3-svg-legend": "^2.25.4",
     "d3-transition": "^1.1.1",
     "fs": "^0.0.1-security",
+    "keymirror": "^0.1.1",
     "live-server": "^1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
@@ -40,6 +41,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-act": "^1.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "uuid": "^3.1.0",
