--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "d3-svg-legend": "^2.25.4",
     "d3-transition": "^1.1.1",
     "fs": "^0.0.1-security",
-    "immutable": "^3.8.2",
+    "immutable": "4.0.0-rc.9",
     "keymirror": "^0.1.1",
     "live-server": "^1.2.0",
     "moment": "^2.20.1",
