--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -29,6 +30,10 @@
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.4",
     "d3-transition": "^1.1.1",
+    "eslint": "^4.17.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.6.1",
     "fs": "^0.0.1-security",
     "immutable": "4.0.0-rc.9",
     "keymirror": "^0.1.1",
@@ -36,6 +41,7 @@
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
