--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
     "d3-brush": "^1.0.4",
+    "d3-format": "^1.2.2",
     "d3-geo": "^1.9.1",
     "d3-scale": "^1.0.7",
+    "d3-scale-chromatic": "^1.2.0",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.4",
