Integrated with new devices API. Changed how data is mapped in the store.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
+    "object-hash": "^1.2.0",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
