--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "redux-act": "^1.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "tinycolor": "^0.0.1",
+    "tinygradient": "^0.3.1",
     "uuid": "^3.1.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
