--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.7",
     "d3": "^4.12.2",
     "d3-array": "^1.2.1",
