--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-flip-move": "^3.0.1",
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "1.x",
     "redux": "^3.7.2",
     "redux-act": "^1.6.0",
     "sass-loader": "^6.0.6",
