Cleaned up styling.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
+    "autoprefixer": "^8.1.0",
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -45,6 +46,9 @@
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "object-hash": "^1.2.0",
+    "postcss-cli": "^5.0.0",
+    "postcss-loader": "^2.1.1",
+    "postcss-plugins": "^1.11.1",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
