--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gh-pages": "^1.1.0",
     "immutable": "4.0.0-rc.9",
     "keymirror": "^0.1.1",
+    "lodash": "latest",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
@@ -44,19 +45,19 @@
     "react-transition-group": "1.x",
     "redux": "^3.7.2",
     "redux-act": "^1.6.0",
+    "styled-components": "^3.2.3",
     "tinycolor": "^0.0.1",
     "tinygradient": "^0.3.1",
-    "uuid": "^3.1.0",
-    "lodash": "latest"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -74,8 +75,8 @@
     "loglevel": "^1.6.0",
     "postcss-loader": "^2.1.1",
     "postcss-plugins": "^1.11.1",
-    "style-loader": "^0.19.1",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.1"
