--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-countup": "^3.0.3",
     "react-dom": "^16.2.0",
     "react-flip-move": "^3.0.1",
     "react-modal": "^3.1.10",
