--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "author": "Jeffrey Weng",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server",
+    "dev-server": "webpack-dev-server --config ./config/webpack.dev.js",
     "build:production": "webpack --config ./config/webpack.prod.js",
     "deploy": "gh-pages -d dist"
   },
@@ -79,7 +78,8 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "webpack": "^4.12.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.1"
   }
 }
