--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
-    "d3": "^4.12.2",
+    "d3": "^5.6.0",
     "d3-array": "^1.2.1",
-    "d3-axis": "^1.0.8",
+    "d3-axis": "^1.0.9",
     "d3-brush": "^1.0.4",
     "d3-format": "^1.2.2",
     "d3-geo": "^1.9.1",
-    "d3-scale": "^1.0.7",
+    "d3-scale": "^2.1.0",
     "d3-scale-chromatic": "^1.2.0",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
@@ -30,57 +30,57 @@
     "keymirror": "^0.1.1",
     "lodash": "latest",
     "moment": "^2.20.1",
-    "node-sass": "^4.7.2",
-    "normalize.css": "^7.0.0",
+    "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "object-hash": "^1.2.0",
-    "prettier": "^1.10.2",
+    "prettier": "^1.14.2",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-countup": "^3.0.3",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.2",
+    "react-countup": "^4.0.0-alpha.6",
+    "react-dom": "^16.4.2",
     "react-flip-move": "^3.0.1",
-    "react-modal": "^3.1.10",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "1.x",
-    "recompose": "^0.27.1",
-    "redux": "^3.7.2",
+    "react-transition-group": "2.4.0",
+    "recompose": "^0.28.2",
+    "redux": "^4.0.0",
     "redux-act": "^1.6.0",
-    "styled-components": "^3.2.3",
+    "styled-components": "^3.4.5",
     "tinycolor": "^0.0.1",
-    "tinygradient": "^0.3.1",
-    "uuid": "^3.1.0"
+    "tinygradient": "^0.4.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
+    "autoprefixer": "^9.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.17.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.6.1",
-    "file-loader": "^1.1.6",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "gh-pages": "^1.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "live-server": "^1.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "live-server": "latest",
     "loglevel": "^1.6.0",
-    "postcss-loader": "^2.1.1",
-    "postcss-plugins": "^1.11.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.1"
+    "postcss-loader": "^3.0.0",
+    "postcss-plugins": "^1.12.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "latest",
+    "webpack-merge": "^4.1.4"
   }
 }
