--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "2.4.0",
+    "react-transition-group": "^2.4.0",
     "recompose": "^0.28.2",
     "redux": "^4.0.0",
     "redux-act": "^1.6.0",
