--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss-plugins": "^1.12.1",
     "react-virtualized": "^9.20.1",
     "sass-loader": "^7.1.0",
+    "socket.io-client": "^2.1.1",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
