--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "recompose": "^0.28.2",
     "redux": "^4.0.0",
     "redux-act": "^1.6.0",
+    "reselect": "^4.0.0",
     "styled-components": "^3.4.5",
     "tinycolor": "^0.0.1",
     "tinygradient": "^0.4.0",
