--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "immutable": "4.0.0-rc.9",
     "keymirror": "^0.1.1",
     "lodash": "latest",
+    "mac-address-util": "^1.3.1",
     "moment": "^2.20.1",
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
