--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "styled-components": "^3.4.5",
     "tinycolor": "^0.0.1",
     "tinygradient": "^0.4.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "why-did-you-update": "^1.0.6",
+    "d3-timer": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.3",
