--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.4",
+    "d3-timer": "latest",
     "d3-transition": "^1.1.1",
     "gh-pages": "^1.1.0",
     "immutable": "4.0.0-rc.9",
@@ -54,8 +55,7 @@
     "tinycolor": "^0.0.1",
     "tinygradient": "^0.4.0",
     "uuid": "^3.3.2",
-    "why-did-you-update": "^1.0.6",
-    "d3-timer": "latest"
+    "why-did-you-update": "^1.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.3",
@@ -75,6 +75,7 @@
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.5.1",
     "file-loader": "^2.0.0",
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
