--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "gh-pages": "^1.1.0",
     "immutable": "4.0.0-rc.9",
     "keymirror": "^0.1.1",
-    "lodash": "latest",
+    "lodash": "^4.17.15",
     "mac-address-util": "^1.3.1",
     "moment": "^2.20.1",
-    "node-sass": "^4.9.3",
+    "node-sass": "4.12.0",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.2.0",
     "prettier": "^1.14.2",
@@ -59,19 +59,19 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.1.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
+    "babel-cli": "6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.4.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.3.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
@@ -79,7 +79,7 @@
     "file-loader": "^2.0.0",
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "live-server": "latest",
+    "live-server": "^1.2.1",
     "loglevel": "^1.6.0",
     "postcss-loader": "^3.0.0",
     "postcss-plugins": "^1.12.1",
@@ -89,7 +89,7 @@
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "latest",
+    "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.1.4"
   }
 }
