--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.9",
     "d3-brush": "^1.0.4",
+    "d3-collection": "^1.0.7",
     "d3-format": "^1.2.2",
     "d3-geo": "^1.9.1",
     "d3-scale": "^2.1.0",
@@ -24,7 +25,7 @@
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.25.4",
-    "d3-timer": "latest",
+    "d3-timer": "^2.0.0",
     "d3-transition": "^1.1.1",
     "gh-pages": "^1.1.0",
     "immutable": "4.0.0-rc.9",
