--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "ChenxiYuan <yuanchenxi95@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@maxmind/geoip2-node": "^2.3.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
@@ -19,6 +20,7 @@
     "http-status-codes": "^1.3.0",
     "lodash": "^4.17.11",
     "mac-address-util": "^1.3.1",
+    "maxmind": "^4.3.1",
     "moment": "^2.22.2",
     "mongoose": "^5.3.2",
     "morgan": "^1.9.1",
