--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@types/node": "^14.14.37",
     "axios": "^0.18.1",
     "classnames": "^2.2.5",
     "d3": "^5.6.0",
@@ -42,10 +43,10 @@
     "ramda-lens": "^0.1.2",
     "react": "^16.8.3",
     "react-countup": "^4.0.0-alpha.6",
-    "react-dom": "^16.8.3",
+    "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.1",
     "react-modal": "^3.5.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.4.0",
     "recompose": "^0.28.2",
@@ -97,8 +98,8 @@
     "react-virtualized": "^9.20.1",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.1.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.1.4"
   }
