--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@maxmind/geoip2-node": "^2.3.1",
+    "@types/node": "^14.14.37",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "forever": "^0.15.3",
     "http-status-codes": "^1.3.0",
