--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@types/node": "^14.14.37",
     "axios": "^0.18.1",
     "classnames": "^2.2.5",
@@ -34,7 +35,7 @@
     "lodash": "^4.17.15",
     "mac-address-util": "^1.3.1",
     "moment": "^2.20.1",
-    "node-sass": "4.12.0",
+    "node-sass": "npm:sass@^1.43.4",
     "normalize.css": "^8.0.0",
     "object-hash": "^1.2.0",
     "prettier": "^1.14.2",
